# nebchess

./: .dockerignore  .gitignore  Cargo.toml  ONBOARDING.md  README.md
.github/workflows/: ci.yml
deploy/: Dockerfile  README.md  config.yml
docs/: field-analysis-050.md  field-analysis-071.md  lichess-deploy.md  sprt-log.md  strength-log.md  tactics-log.md
docs/superpowers/plans/: 2026-06-04-plan-1-m0-m1-board-and-movegen.md  2026-06-05-plan-2-m2-minimal-engine.md  2026-06-05-plan-3-m3-tt-ordering-pvs.md  2026-06-05-plan-4-m4-pruning-tuning.md  2026-06-06-plan-5-m5-full-eval.md  2026-06-06-plan-6-m6-search.md  (+9 more)
examples/: pgn_replay.rs
src/: lib.rs  main.rs  tb.rs
src/board/: attacks.rs  bitboard.rs  magics.rs  mod.rs  movegen.rs  moves.rs  perft.rs  position.rs  types.rs  zobrist.rs
src/book/: mod.rs  polyglot_random.rs
src/eval/: eval_params.rs  hce.rs  manifest.rs  mod.rs  psqt.rs  trace.rs
src/eval/nnue/: mod.rs  (+2 more)
src/search/: bench.rs  limits.rs  mod.rs  see.rs  tt.rs
src/uci/: mod.rs
tests/: perft.rs  search.rs  syzygy.rs  uci.rs
tools/: analyze-field.py  anchored-gauntlet.sh  baseline.sh  check-bench.sh  download-book.sh  download-books.sh  download-syzygy.sh  download-testsuites.sh  download-tuning-data.sh  forfeit-gauntlet.sh  get-anchors.sh  krk-stress.sh  make-migration-bundle.sh  perft_compare.py  probe.sh  setup-fastchess.sh  smoke-match.sh  sprt-book.sh  sprt.sh  tactics.sh  timebrain-h2h.sh  uci-torture.sh  uci_replay_check.py
tools/lichess/: README.md  config.yml  deploy.sh  matchmaker.py  run.sh
tools/suites/: sac-entrance.epd
tools/trainer/: .gitignore  Cargo.toml  README.md  prepare-data.sh
tools/trainer/src/: main.rs
(+6 files in other folders)
