[package]
name = "nebchess"
version = "0.6.0"
edition = "2021"
description = "A from-scratch UCI chess engine targeting 2400 CCRL Blitz"
repository = "https://github.com/N3bDev/nebchess"
license = "MIT"

[lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1

# perft/bench need optimized code even under `cargo test`
[profile.test]
opt-level = 2
